--- a/App.config
+++ b/App.config
@@ -96,7 +96,16 @@
 																												  EEPROM are programmed.
 			LimitLow		:	Optional	:	System.String	:	Test's low limit						:	5.25, for 5.0VDC with +5% tolerance
 			LimitHigh		:	Optional	:	System.String	:	Test's high limit						:	4.75, for 5.0VDC with -5% tolerance
-			Units			:	Optional	:	System.String	:	SI Base/Derived Units + Metric Prefixes	:	mA (milli Amps), µV (micro Volts), etc.
+			Units			:	Optional	:	System.String	:	SI Base/Derived Units + Metric Prefixes	:	mA (milli Amps), µV (micro Volts) XOR "N/A".
+																	XOR "N/A" for Not Applicable				If:
+																												- Units = "N/A"
+																												- And LimitLow = LimitHigh
+																												- And LimitLow/LimitLow both ≠ String.Empty
+																												Then:
+																												- Comparison performed is String.Equals(),
+																												  or a string comparison between measured
+																												  value and LimitLow, rather than a numeric
+																												  comparison.
 		-->
     <!-- Use character '|' to separate GroupsToTestsElement IDTests. -->
     <!-- Thus TestElement IDs cannot contain character '|' in them. -->
