--- a/App.config
+++ b/App.config
@@ -14,7 +14,7 @@
     <add key="LOGGER_FileEnabled" value="true" />
     <!-- LOGGER_FileEnabled & LOGGER_SQLEnabled are independent of each other. -->
     <!-- Can choose to Log to Text only, SQL only, both Text & SQL or neither, depending what the Customer requires. -->
-    <add key="LOGGER_FilePath" value="P:\Test\TDR\D4522137\Functional\" />
+    <add key="LOGGER_FilePath" value="LOGGER_FilePath" />
     <!-- Text Log Paths are only relevant if LOGGER_FileEnabled is true. -->
     <add key="LOGGER_SQLEnabled" value="false" />
     <!-- LOGGER_FileEnabled & LOGGER_SQLEnabled are independent of each other. -->
@@ -22,13 +22,13 @@
     <add key="LOGGER_SQLConnectionString" value="" />
     <!--  SQL connection string only relevant if LOGGER_SQLEnabled is true. -->
     <!-- Standard ABTTestLibApp UUT configuration settings, specific to the Unit Under Test. -->
-    <add key="UUT_Customer" value="Raytheon" />
-    <add key="UUT_Type" value="CCA" />
+    <add key="UUT_Customer" value="UUT_Customer" />
+    <add key="UUT_Type" value="UUT_Type" />
     <!-- System, Unit, Sub-Unit, CCA, Component, etc. -->
-    <add key="UUT_Number" value="D4522137-2" />
-    <add key="UUT_Revision" value="A" />
-    <add key="UUT_Description" value="isoMicro" />
-    <add key="UUT_TestSpecification" value="0001624557, Draft A" />
+    <add key="UUT_Number" value="UUT_Number" />
+    <add key="UUT_Revision" value="UUT_Revision" />
+    <add key="UUT_Description" value="UUT_Description" />
+    <add key="UUT_TestSpecification" value="UUT_TestSpecification" />
     <!-- Custom configuration settings specific to this APP, LOG or UUT, and not provided by their standard configurations from ABTTestLibrary. -->
     <!-- These settings should be initialized in a local library specific to the test program/application. -->
     <add key="CUSTOM_SMBusAddress" value="40" />
@@ -36,44 +36,42 @@
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <GroupElementsSection>
-    <!--				
+	  <!--				
 			Name			:	Status		:	.Net Type		:	Purpose											Notes(s)
 			=============   :	=========   :	=============   :   ====================================		:	==========================================================
 			ID				:	Required	:	System.String	:	Unique Identifier							:   Unique Identifier; no 2 can be identical, ID is key in a Dictionary object.
-																													Must be also be a valid C# identifier; see 
-																													https://learn.microsoft.com/en-us/dotnet/csharp/fundamentals/coding-style/identifier-names.
-																													Suggest T10, T20, T30, T40... ABT FilePro Traveler Test Operations.
-																													Recommend alpha-numerically ordering to avoid duplications,
-																													which throw Exceptions.
-			Required		:	Required	:	System.Boolean	:	Does Customer require running this Group?	:	Enables Groups of Tests useful for troubleshooting UUTs
-																											`		to also be run by test operator.  Non-required Groups
-																													however will not create valid test data nor report overall
-																													UUT results, just Group results.
-																													Multiple Groups can be required, if there are multiple
-																													FilePro Test Operations; T10, TT20, T30...
-																													Recommend ordering all Required Groups by Test Operation,
-																													then non-Required as desired.
-																													Order of Group appearance in this App.config determines order of
-																													appearance when selecting Groups in GroupSelection ListView.
-			Summary			:	Required	:	System.String	:	Concise description of Group				:	PowerUp performs all power application tests.
+																													- Suggest T10, T20, T30, T40... ABT FilePro Traveler Test Operations.
+			Required		:	Required	:	System.Boolean	:	Does Customer require running this Group?	:	If Required = true, it's a Group of Tests the UUT's customer requires
+																													be executed & pass in order to ship the UUT.
+																													- Required Groups generally correspond to FilePro Traveler
+																													  operations; T10, T20, T30...
+																													- If Required = false, Group is a custom subset of Tests
+																													  solely useful for troubleshooting UUTs that don't pass
+																													  their Required Groups.
+																													- Non-required Groups don't create valid test data nor report
+																													  overall UUT results, just their custom Group results.
+																													- Multiple Groups can be required, if there are multiple
+																													  FilePro Test Operations; T10, T20, T30...
+																													- Recommend ordering all Required Groups by Test Operation,
+																													  then non-Required as desired.
+																													- Order of Group appearance in this App.config determines order of
+																													  appearance when selecting Groups in GroupSelection ListView,
+																													  so optimally order them in the sequence they're performed;
+																													  (T10, T20, T30...)
+			Summary			:	Required	:	System.String	:	Concise description of Group				:	PowerUp performs all power application/measurement tests.
 			Detail			:	Optional	:	System.String	:	Optional verbose description of Group		:	PowerUp:
-																													- Apply/measure +28V.
-																													- Apply/measure +5V.
-																													- Apply/measure +3.3V.
-																													- Measure derived ±12.0V
-																													- Measure derived +2.5V
-																													- Measure derived +1.8V
-																													- Measure derived +1.2V
-			TestIDs			:	Required	:	System.String	:	Tests in Group, in order of execution		:	1 or more TestIDs from TestElements, separated by '|'.
-		-->
-    <!--ABT Test Operations to Raytheon 0001624557 Test Paragraphs:
-			T10: 5.1 SSTO Flying Probe, P00010.
-			T20: 5.2 Inductance Check, P00050.
-			T30: 5.3 Initial Power Up, P00100 - P00200.
-				  5.4 UUT Programming, P00300 - P00600.
-				  5.5 Initial Configuration, P00700 - P00750.
-				  5.6 Power Stage Health Check, P00800 - P10200.
-			T50: 6.0 Calibration & Final Test, P10300 - P11800.
+																													- Apply/measure +28.0 VDC.
+																													- Apply/measure +5.0 VDC.
+																													- Apply/measure +3.3 VDC.
+																													- Measure derived ±12.0 VDC
+																													- Measure derived +2.5 VDC
+																													- Measure derived +1.8 VDC
+																													- Measure derived +1.2 VDC
+			TestIDs			:	Required	:	System.String	:	Tests in Group, *in order of execution*		:	1 or more TestIDs from TestElements, separated by '|'.
+																													- Tests execute in *entry order*:
+																													  - Entry "P2|P3|P1" executed in sequence (P2, P3, P1).
+																													  - Entry "P3|P1|P2" executed in sequence (P3, P1, P2).
+																													  - Entry "P1|P2|P3" executed in sequence (P1, P2, P3).
 		-->
     <GroupElements>
       <GroupElement ID="T30" Required="true" Summary="PreMold"  Detail="5.3 Initial Power Up, P00100 - P00200.&#xD;&#xA;5.4 UUT Programming, P00300 - P00600.&#xD;&#xA;5.5 Initial Configuration, P00700 - P00750.&#xD;&#xA;5.6 Power Stage Health Check, P00800 - P10200." TestIDs="P00100|P00101" />
@@ -81,60 +79,122 @@
     </GroupElements>
   </GroupElementsSection>
   <TestElementsSection>
-    <!--				
-			Name			:	Status		:	.Net Type		:	Purpose										Notes(s)
+	  <!--				
+			Name			:	Status		:	.Net Type		:	Purpose										Notes/Examples
 			=============   :	=========   :	=============   :   ====================================	:	==========================================================
 			ID				:	Required	:	System.String	:	Unique Identifier						:	Unique Identifier; no 2 can be identical, ID is key in a Dictionary object.
-																												P00100, P00200, P00300...
-																												Must be also be a valid C# identifier; see 
-																												https://learn.microsoft.com/en-us/dotnet/csharp/fundamentals/coding-style/identifier-names.
+																												- Test001, Test002, Test003...
+																												- *Must* also be a valid C# identifier; see 
+																												  https://learn.microsoft.com/en-us/dotnet/csharp/fundamentals/coding-style/identifier-names.
+																												- Recommend alpha-numerically ordering to avoid duplications,
+																												  which throw Exceptions.
+																												- Can be ordered as desired though; test execution order
+																												  *solely* determined by GroupElement TestIDs test ordering.
+																												- Cannot contain | character.
+																												  - Using character '|' to separate GroupsToTestsElement IDTests.
+																												  - Thus TestElement IDs cannot contain character '|' in them.
+																												  - ID="Test001 valid.
+																												  - ID="Test|001" invalid
 			Summary			:	Required	:	System.String	:	Concise description of Test				:	Apply/measure +5V DC Input Voltage pre-programming.
 			Detail			:	Optional	:	System.String	:	Optional verbose description of Test	:	Apply +5V DC Voltage from +Vcc to GND.
 																												- Limit current to 0.75 Amps.
 																												- Measure voltage after 2.0 seconds delay.
-																												- Perform test before U6 µController and U7
-																												  EEPROM are programmed.
-			LimitLow		:	Optional	:	System.String	:	Test's low limit						:	5.25, for 5.0VDC with +5% tolerance
-			LimitHigh		:	Optional	:	System.String	:	Test's high limit						:	4.75, for 5.0VDC with -5% tolerance
-			Units			:	Optional	:	System.String	:	SI Base/Derived Units + Metric Prefixes	:	mA (milli Amps), µV (micro Volts) XOR "N/A".
-																	XOR "N/A" for Not Applicable				If:
-																												- Units = "N/A"
-																												- And LimitLow = LimitHigh
-																												- And LimitLow/LimitLow both ≠ String.Empty
-																												Then:
-																												- Comparison performed is String.Equals(),
-																												  or a string comparison between measured
-																												  value and LimitLow, rather than a numeric
-																												  comparison.
+																												- Perform test before U6 µController and U7 EEPROM are programmed.
+			LimitLow		:	Optional,	:	System.String	:	Test's low limit						:	4.75, for 5.0VDC with -5% tolerance
+								with caveats;																	- Parsed as Double.TryParse(LimitLow, NumberStyles.Float, CultureInfo.CurrentCulture, out dMeasurement);
+								see Invalid &																	- https://learn.microsoft.com/en-us/dotnet/api/system.double.tryparse?view=net-7.0#system-double-tryparse(system-string-system-globalization-numberstyles-system-iformatprovider-system-double
+								Valid Tests																		- https://learn.microsoft.com/en-us/dotnet/api/system.globalization.numberstyles?view=net-7.0#system-globalization-numberstyles-float
+								below.																			- Scientific Notation allowed & encouraged:
+																												  - 1.0E5 is valid instead of 100000.0.
+																												  - 1.5E-5 is valid instead of 0.000015.
+																												- Postive/Negative +/- signs allowed in both exponent & significand:
+																												  +1.0E+5 is valid for +100000.0.
+																												   - Reccommend 1.0E5 though.
+																												  -1.0E5 is valid for -1000000.0.
+																												  1.5E-5 is valid for 0.000015.
+																												  -1.5E-5 is valid for -0.000015.
+																												- Int32 & Double both allowed:
+																												  - 100000 & 100000.0 both valid.
+																												- Commas not allowed:
+																												  - 100000 & 1000000 both valid.
+																												  - 100,000 & 1,000,000 both invalid.
+																												  - Recommend 1E5 and 1E6 instead.
+			LimitHigh		:	Optional,	:	System.String	:	Test's high limit						:	5.25, for 5.0VDC with +5% tolerance
+								with caveats;																	- Parsed identically as LimitLow.
+								see Invalid &	
+								Valid Tests		
+								below.																															
+			Units			:	Optional	:	System.String	:	SI Base & Derived Units					:	A, V, F, H, Ω, S, °C, s, Hz, W, VA for respectively
+																												amperes, volts, farads, henries, ohms, siemens,
+																												degrees Celcius, seconds, hertz, watts, volt-amperes.
+																												https://en.wikipedia.org/wiki/SI_base_unit
+																												https://en.wikipedia.org/wiki/SI_derived_unit
+																												- Optionally "" or "N/A", when Units = Not Applicable: 
+																												- NOTE: do not use Metric prefixes:																												- Do not use Metric Prefixes!
+																												  - That is, do not use micro, milli, kilo, mega, etc.
+																												    or their μ, m, k, M, etc. symbols either.
+																												  - Instead, always normalize LimitLow & LimitHigh to
+																												    unitary SI Units without prefixes.
+																													- That is, unit ADC, AAC, VDC, VAC, Ohm, W, VA.
+																													  - 10000 Ohms is valid.
+																													  - 10 KiloOhms or 10 KOhms invalid.
+																													  - Again, recommend Scientific Notation when applicable.
+																												- NOTE: Units are purely cosmetic in function; they aren't used
+																												  to calculate test PASS/FAIL results as LimitLow & LimitHigh are,
+																												  only for reporting what Units their Test's measured values are in.
+			UnitType		:	Optional	:	System.String	:											:	AC, DC, Peak, PP, RMS respectively for Alternating Current,
+																												Direct Current, Peak, Peak-to-Peak, Root-Mean-Squared.
+																											    - NOTE: UnitTypes are purely cosmetic in function; they aren't used
+																												  to calculate test PASS/FAIL results as LimitLow & LimitHigh are,
+																												  only for reporting metadata about the Units the tests measured
+																												  values are in.
+
+			Invalid Tests:
+			- LimitLow = LimitHigh = String.Empty.
+			- LimitLow = String.Empty,	LimitHigh ≠ String.Empty, but won't parse to Double.
+			- LimitHigh = String.Empty, LimitLow  ≠ String.Empty, but won't parse to Double.
+			- LimitLow ≠ String.Empty,	LimitHigh ≠ String.Empty, neither parse to Double, & LimitLow ≠ LimitHigh.
+
+			Valid Tests:
+			- LimitLow < LimitHigh & both parse to Double:
+			  - Typical low & high limits, including a range of passing numeric measurements.
+			- LimitLow > LimitHigh & both parse to Double:
+			  - Atypical low & high limits, excluding a range of measurements from passing..
+			  - Could test if a digital voltage is an acceptable TTL signal; LimitLow = 2.0, LimitHigh = 0.8
+			    will pass if a digital voltage is not in the undefined TTL range of 0.8 to 2.0 VDC.
+			  - You'd also want additional tests to confirm the voltage was ≥ 0 and ≤ 5.0 though.
+			  - See "CUSTOM" Limits below.
+			- LimitLow = LimitHigh & both parse to Double:
+			  - This simply means only the specific exact measurement passes.
+			  - *Not recommended* due to potential roundoff when parsing String Limits & instrument measurement inaccuracies.
+			  - Most (all) real-world measurements require non-zero tolerances.
+			- LimitLow parses to Double, LimitHigh = String.Empty:
+			 - Only low limit, no high.
+			  - HiPot passes if ≥ 1E6 Ω.
+			- LimitLow = String.Empty, LimitHigh parses to Double:
+			  - No low limit, only high.
+			  - Continuities pass if ≤ 5 Ω.
+			- LimitLow = LimitHigh, both ≠ String.Empty, & neither parse to Double:
+			  - This is to verify specific checksums or CRCs, or to read specific non-numeric String contents from memory or a file, parse operator input, etc.
+			- LimitLow = LimitHigh = "CUSTOM":
+			  - If multiple permissable results are required, say any String in the set {"Alpha", "Beta", "Gamma", "Delta", "Epsilon"} must pass:
+			  - Or multiple numeric ranges required, say any TTL Voltage V where (0 ≤ V ≤ 0.8) && (2.0 ≤ V ≤ 5.0):
+				- Set both LimitLow & LimitHigh to "CUSTOM".
+				- Write custom code in your Test method to evaluate the Test's measurement:
+				  - If in the set {"Alpha", "Beta", "Gamma", "Delta", "Epsilon"}
+				  - Or (0 ≤ V ≤ 0.8) && (2.0 ≤ V ≤ 5.0)
+				  - Then return EventCodes.PASS from your method, else return EventCodes.FAIL.
+				  - Or return any valid EventCode as applicable; e.g. EventCodes.ABORT, EventCodes.ERROR or EventCodes.UNSET.
+			  - Finally, write custom code in your Test method to log the results in detail directly, using Serilog's Log.Information() method
+				rather than ABTTestLibrary's default LogTasks.LogTest() method invoked from its Run() method.
+			  - Permits multiple measurements or operations to be performed & logged in a single Test, but with a *single* overall result.
+			    - Tradeoff is LimitLow/LimitHigh aren't defined or modifiable from this App.config file, only defined/modifiable in the Test's method.
 		-->
-    <!-- Use character '|' to separate GroupsToTestsElement IDTests. -->
-    <!-- Thus TestElement IDs cannot contain character '|' in them. -->
-    <!-- OK: ID="Test_001 -->
-    <!-- Not OK: ID="Test|001" -->
     <TestElements>
       <TestElement ID="P00100" Summary="V" Detail="Initial Power, Volts" LimitLow="6.2" LimitHigh="6.3" Units="Volts" />
       <TestElement ID="P00101" Summary="A" Detail="Initial Power, Volts" LimitLow="0.0" LimitHigh="1.0" Units="Amps" />
       <TestElement ID="P10300" Summary="V" Detail="Initial Power, Volts" LimitLow="6.2" LimitHigh="6.3" Units="Volts" />
       <TestElement ID="P10301" Summary="A" Detail="Initial Power, Volts" LimitLow="0.0" LimitHigh="1.0" Units="Amps" />
-      <!--
-		    Project ABTTestLibraryTests, class TestSupportTests, method EvaluateTestResultTest:
-			Invalid Tests:
-		    - LimitLow = LimitHigh = String.Empty.
-            - LimitLow = String.Empty,	LimitHigh ≠ String.Empty, but won't parse to Double.
-            - LimitHigh = String.Empty, LimitLow  ≠ String.Empty, but won't parse to Double.
-            - LimitLow ≠ String.Empty,	LimitHigh ≠ String.Empty, neither parse to Double, & LimitLow ≠ LimitHigh.
-
-		    Valid Tests:
-			- LimitLow & LimitHigh both parse to Doubles; both low & high limits.
-			- LimitLow is allowed to be > LimitHigh if both parse to Double.
-			  This simply excludes a range of measurements from passing, rather than including a range from passing.
-			- LimitLow is allowed to be = LimitHigh if both parse to Double.
-			  This simply means only one measurement passes.
-			- LimitLow parses to Double, LimitHigh = String.Empty; only low limit, no high.
-			- LimitLow = String.Empty, LimitHigh parses to Double; no low limit, only high.
-			- LimitLow = LimitHigh, both ≠ String.Empty, and neither parse to Double.
-			  This is to verify checksums or CRCs, or to read String contents from memory, or from a file, etc.
-		-->
     </TestElements>
   </TestElementsSection>
   <runtime>
