--- a/App.config
+++ b/App.config
@@ -191,10 +191,11 @@
 			    - Tradeoff is LimitLow/LimitHigh aren't defined or modifiable from this App.config file, only defined/modifiable in the Test's method.
 		-->
     <TestElements>
-      <TestElement ID="P00100" Summary="V" Detail="Initial Power, Volts" LimitLow="6.2" LimitHigh="6.3" Units="Volts" />
-      <TestElement ID="P00101" Summary="A" Detail="Initial Power, Volts" LimitLow="0.0" LimitHigh="1.0" Units="Amps" />
-      <TestElement ID="P10300" Summary="V" Detail="Initial Power, Volts" LimitLow="6.2" LimitHigh="6.3" Units="Volts" />
-      <TestElement ID="P10301" Summary="A" Detail="Initial Power, Volts" LimitLow="0.0" LimitHigh="1.0" Units="Amps" />
+      <TestElement ID="T001" Summary="V28"  Detail="V28 to GND, applied."  LimitLow="25.2" LimitHigh="30.8" Units="V" UnitType="DC" />
+      <TestElement ID="T002" Summary="V5"   Detail="V5 to GND, derived."   LimitLow="4.5"  LimitHigh="5.55" Units="V" UnitType="DC" />
+      <TestElement ID="T003" Summary="V3_3" Detail="V3_3 to GND, derived." LimitLow="2.97" LimitHigh="3.63" Units="V" UnitType="DC" />
+      <TestElement ID="T004" Summary="V2_5" Detail="V2_5 to GND, derived." LimitLow="2.25" LimitHigh="2.75" Units="V" UnitType="DC" />
+	<!-- Voltage limits ±10% of nominal. -->	
     </TestElements>
   </TestElementsSection>
   <runtime>
