--- a/App.config
+++ b/App.config
@@ -24,7 +24,7 @@
     <!-- Standard ABTTestLibApp UUT configuration settings, specific to the Unit Under Test. -->
     <add key="UUT_Customer" value="UUT_Customer" />
     <add key="UUT_Type" value="UUT_Type" />
-    <!-- System, Unit, Sub-Unit, CCA, Component, etc. -->
+	  <!-- Reccommended choices: { System, Unit, CCA, Harness, Component }. -->
     <add key="UUT_Number" value="UUT_Number" />
     <add key="UUT_Revision" value="UUT_Revision" />
     <add key="UUT_Description" value="UUT_Description" />
@@ -69,13 +69,13 @@
 																													- Measure derived +1.2 VDC
 			TestIDs			:	Required	:	System.String	:	Tests in Group, *in order of execution*		:	1 or more TestIDs from TestElements, separated by '|'.
 																													- Tests execute in *entry order*:
-																													  - Entry "P2|P3|P1" executed in sequence (P2, P3, P1).
-																													  - Entry "P3|P1|P2" executed in sequence (P3, P1, P2).
-																													  - Entry "P1|P2|P3" executed in sequence (P1, P2, P3).
+																													  - Entry "T3|T1|T2" executed in sequence (T3, T1, T2).
+																													  - Entry "T1|T2|T3" executed in sequence (T1, T2, T3).
+																													  - Entry "T2|T3|T1" executed in sequence (T2, T3, T1).
 		-->
     <GroupElements>
-      <GroupElement ID="T30" Required="true" Summary="PreMold"  Detail="5.3 Initial Power Up, P00100 - P00200.&#xD;&#xA;5.4 UUT Programming, P00300 - P00600.&#xD;&#xA;5.5 Initial Configuration, P00700 - P00750.&#xD;&#xA;5.6 Power Stage Health Check, P00800 - P10200." TestIDs="P00100|P00101" />
-      <GroupElement ID="T50" Required="true" Summary="PostMold" Detail="6.0 Calibration &amp; Final Test, P10300 - P11800." TestIDs="P10300|P10301" />
+      <GroupElement ID="T30" Required="true" Summary="T30" Detail="Initial Test, Pre-Bonding, Coating &amp; ESS." TestIDs="T001|T002|T003|T004|T005" />
+      <GroupElement ID="T50" Required="true" Summary="T50" Detail="Final Test PostBonding, Coating &amp; ESS."    TestIDs="T001|T002|T003|T004|T005" />
     </GroupElements>
   </GroupElementsSection>
   <TestElementsSection>
@@ -191,10 +191,11 @@
 			    - Tradeoff is LimitLow/LimitHigh aren't defined or modifiable from this App.config file, only defined/modifiable in the Test's method.
 		-->
     <TestElements>
-      <TestElement ID="T001" Summary="V28"  Detail="V28 to GND, applied."  LimitLow="25.2" LimitHigh="30.8" Units="V" UnitType="DC" />
-      <TestElement ID="T002" Summary="V5"   Detail="V5 to GND, derived."   LimitLow="4.5"  LimitHigh="5.55" Units="V" UnitType="DC" />
-      <TestElement ID="T003" Summary="V3_3" Detail="V3_3 to GND, derived." LimitLow="2.97" LimitHigh="3.63" Units="V" UnitType="DC" />
-      <TestElement ID="T004" Summary="V2_5" Detail="V2_5 to GND, derived." LimitLow="2.25" LimitHigh="2.75" Units="V" UnitType="DC" />
+        <TestElement ID="T001" Summary="V28"  Detail="V28 to GND, applied."  LimitLow="25.2" LimitHigh="30.8" Units="V" UnitType="DC" />
+        <TestElement ID="T002" Summary="V5"   Detail="V5 to GND, derived."   LimitLow="4.5"  LimitHigh="5.55" Units="V" UnitType="DC" />
+        <TestElement ID="T003" Summary="V3_3" Detail="V3_3 to GND, derived." LimitLow="2.97" LimitHigh="3.63" Units="V" UnitType="DC" />
+        <TestElement ID="T004" Summary="V2_5" Detail="V2_5 to GND, derived." LimitLow="2.25" LimitHigh="2.75" Units="V" UnitType="DC" />
+        <TestElement ID="T005" Summary="Pass/Fail"  Detail="Operator confirmed bootup &amp; 'Happy Lights'."  LimitLow="CUSTOM" LimitHigh="CUSTOM" Units="N/A" UnitType="N/A" />
 	<!-- Voltage limits ±10% of nominal. -->	
     </TestElements>
   </TestElementsSection>
