--- a/App.config
+++ b/App.config
@@ -24,7 +24,7 @@
     <!-- Standard ABTTestLibApp UUT configuration settings, specific to the Unit Under Test. -->
     <add key="UUT_Customer" value="UUT_Customer" />
     <add key="UUT_Type" value="UUT_Type" />
-	  <!-- Reccommended choices: { System, Unit, CCA, Harness, Component }. -->
+	  <!-- Reccommended choices: { System, Unit, CCA, Component }. -->
     <add key="UUT_Number" value="UUT_Number" />
     <add key="UUT_Revision" value="UUT_Revision" />
     <add key="UUT_Description" value="UUT_Description" />
@@ -126,7 +126,7 @@
 								below.																															
 			Units			:	Optional	:	System.String	:	SI Base & Derived Units					:	A, V, F, H, Ω, S, °C, s, Hz, W, VA for respectively
 																												amperes, volts, farads, henries, ohms, siemens,
-																												degrees Celcius, seconds, hertz, watts, volt-amperes.
+																												°Celcius, seconds, hertz, watts, volt-amperes.
 																												https://en.wikipedia.org/wiki/SI_base_unit
 																												https://en.wikipedia.org/wiki/SI_derived_unit
 																												- Optionally "" or "N/A", when Units = Not Applicable: 
@@ -135,17 +135,15 @@
 																												    or their μ, m, k, M, etc. symbols either.
 																												  - Instead, always normalize LimitLow & LimitHigh to
 																												    unitary SI Units without prefixes.
-																													- That is, unit ADC, AAC, VDC, VAC, Ohm, W, VA.
-																													  - 10000 Ohms is valid.
-																													  - 10 KiloOhms or 10 KOhms invalid.
-																													  - Again, recommend Scientific Notation when applicable.
+																													- 10000 Ω is valid.
+																													- 10 kiloΩ or 10 kΩ invalid.
 																												- NOTE: Units are purely cosmetic in function; they aren't used
-																												  to calculate test PASS/FAIL results as LimitLow & LimitHigh are,
+																												  to calculate Test PASS/FAIL results as LimitLow & LimitHigh are,
 																												  only for reporting what Units their Test's measured values are in.
 			UnitType		:	Optional	:	System.String	:											:	AC, DC, Peak, PP, RMS respectively for Alternating Current,
 																												Direct Current, Peak, Peak-to-Peak, Root-Mean-Squared.
 																											    - NOTE: UnitTypes are purely cosmetic in function; they aren't used
-																												  to calculate test PASS/FAIL results as LimitLow & LimitHigh are,
+																												  to calculate Test PASS/FAIL results as LimitLow & LimitHigh are,
 																												  only for reporting metadata about the Units the tests measured
 																												  values are in.
 
@@ -195,7 +193,7 @@
         <TestElement ID="T002" Summary="V5"   Detail="V5 to GND, derived."   LimitLow="4.5"  LimitHigh="5.55" Units="V" UnitType="DC" />
         <TestElement ID="T003" Summary="V3_3" Detail="V3_3 to GND, derived." LimitLow="2.97" LimitHigh="3.63" Units="V" UnitType="DC" />
         <TestElement ID="T004" Summary="V2_5" Detail="V2_5 to GND, derived." LimitLow="2.25" LimitHigh="2.75" Units="V" UnitType="DC" />
-        <TestElement ID="T005" Summary="Pass/Fail"  Detail="Operator confirmed bootup &amp; 'Happy Lights'."  LimitLow="CUSTOM" LimitHigh="CUSTOM" Units="N/A" UnitType="N/A" />
+        <TestElement ID="T005" Summary="Pass/Fail" Detail="Operator confirmed bootup &amp; 'Happy Lights'." LimitLow="CUSTOM" LimitHigh="CUSTOM" Units="N/A" UnitType="N/A" />
 	<!-- Voltage limits ±10% of nominal. -->	
     </TestElements>
   </TestElementsSection>
