--- a/App.config
+++ b/App.config
@@ -73,10 +73,12 @@
 																													  - Entry "T1|T2|T3" executed in sequence (T1, T2, T3).
 																													  - Entry "T2|T3|T1" executed in sequence (T2, T3, T1).
 		-->
-    <GroupElements>
-      <GroupElement ID="T30" Required="true" Summary="T30" Detail="Initial Test, Pre-Bonding, Coating &amp; ESS." TestIDs="T001|T002|T003|T004|T005" />
-      <GroupElement ID="T50" Required="true" Summary="T50" Detail="Final Test PostBonding, Coating &amp; ESS."    TestIDs="T001|T002|T003|T004|T005" />
-    </GroupElements>
+	  <GroupElements>
+		  <GroupElement ID="ID0" Required="false" Summary="Summary0" Detail="Detail0" TestIDs="ID0" />
+		  <GroupElement ID="ID1" Required="true" Summary="Summary1" Detail="Detail1" TestIDs="ID0|ID1" />
+		  <GroupElement ID="ID2" Required="true" Summary="Summary2" Detail="Detail2" TestIDs="ID0|ID1|ID2" />
+		  <!-- Spaces are permitted in GroupElement fields. -->
+	  </GroupElements>
   </GroupElementsSection>
   <TestElementsSection>
 	  <!--				
@@ -189,12 +191,17 @@
 			    - Tradeoff is LimitLow/LimitHigh aren't defined or modifiable from this App.config file, only defined/modifiable in the Test's method.
 		-->
     <TestElements>
-        <TestElement ID="T001" Summary="V28"  Detail="V28 to GND, applied."  LimitLow="25.2" LimitHigh="30.8" Units="V" UnitType="DC" />
-        <TestElement ID="T002" Summary="V5"   Detail="V5 to GND, derived."   LimitLow="4.5"  LimitHigh="5.55" Units="V" UnitType="DC" />
-        <TestElement ID="T003" Summary="V3_3" Detail="V3_3 to GND, derived." LimitLow="2.97" LimitHigh="3.63" Units="V" UnitType="DC" />
-        <TestElement ID="T004" Summary="V2_5" Detail="V2_5 to GND, derived." LimitLow="2.25" LimitHigh="2.75" Units="V" UnitType="DC" />
-        <TestElement ID="T005" Summary="Pass/Fail" Detail="Operator confirmed bootup &amp; 'Happy Lights'." LimitLow="CUSTOM" LimitHigh="CUSTOM" Units="N/A" UnitType="N/A" />
-	<!-- Voltage limits ±10% of nominal. -->	
+		<TestElement ID="ID0"  Summary="Summary0"  Detail="Detail0"  LimitLow=""			LimitHigh=""			Units="Units0"	UnitType="UnitType0"/>
+		<TestElement ID="ID1"  Summary="Summary1"  Detail="Detail1"  LimitLow=""			LimitHigh="LimitHigh"	Units="Units1"	UnitType="UnitType1"/>
+		<TestElement ID="ID2"  Summary="Summary2"  Detail="Detail2"  LimitLow="LimitLow"	LimitHigh=""			Units="Units2"	UnitType="UnitType2"/>
+		<TestElement ID="ID3"  Summary="Summary3"  Detail="Detail3"  LimitLow="LimitLow"	LimitHigh="LimitHigh"	Units="Units3"	UnitType="UnitType3"/>
+		<TestElement ID="ID4"  Summary="Summary4"  Detail="Detail4"  LimitLow="0"			LimitHigh="1"			Units="Units4"	UnitType="UnitType4"/>
+		<TestElement ID="ID5"  Summary="Summary5"  Detail="Detail5"  LimitLow="1"			LimitHigh="0"			Units="Units5"	UnitType="UnitType5"/>
+		<TestElement ID="ID6"  Summary="Summary6"  Detail="Detail6"  LimitLow="1"			LimitHigh="1"			Units="Units6"	UnitType="UnitType6"/>
+		<TestElement ID="ID7"  Summary="Summary7"  Detail="Detail7"  LimitLow="0"			LimitHigh=""			Units="Units7"	UnitType="UnitType7"/>
+		<TestElement ID="ID8"  Summary="Summary8"  Detail="Detail8"  LimitLow=""			LimitHigh="1"			Units="Units8"	UnitType="UnitType8"/>
+		<TestElement ID="ID9"  Summary="Summary9"  Detail="Detail9"  LimitLow="Limit"		LimitHigh="Limit"		Units="N/A"		UnitType="UnitType9"/>
+		<TestElement ID="ID10" Summary="Summary10" Detail="Detail9"  LimitLow="CUSTOM"		LimitHigh="CUSTOM"		Units="Units10"	UnitType="UnitType10"/>
     </TestElements>
   </TestElementsSection>
   <runtime>
